--- a/public/css/faq.css
+++ b/public/css/faq.css
@@ -1,7 +1,6 @@
 .faq-section {
-  min-height: 100vh;
   background: transparent;
-  padding: 4rem 0;
+  padding: 4rem 0 2rem 0;
 }
 
 .faq-content {
