--- a/src/partials/navbar.html
+++ b/src/partials/navbar.html
@@ -3,7 +3,7 @@
   <div class="navbar-container">
     <a href="#home" class="navbar-logo-section">
       <div class="navbar-logo-wrapper">
-        <img src="/khcustomweb_logo.webp" alt="KH Custom Web Logo" class="navbar-logo">
+        <img src="/logo-khcustomweb-groot.webp" alt="KH Custom Web Logo" class="navbar-logo">
       </div>
       <span class="navbar-brand-text">KHCustomWeb</span>
     </a>
